# justpyplot

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  adaptiveplot.py  justpyplot.py  plot.py  pyproject.toml  reload_env.sh  requirements.txt  setup.py  test.py  test_textrender.py
.github/: funding.yaml
.github/workflows/: manual-publish.yml  pylint.yml  python-publish.yml
docs/: README.md  conf.py  index.rst  requirements.txt
examples/: demo.py
examples/mug_objectron/: demo.py  requirements.txt
justpyplot/: __init__.py  justpyplot.py  textrender.py
scripts/: reload_env.sh
tests/: test.py  test_basic.py  test_basic_plot.py  test_plot.py  test_plot_components.py  test_standalone.ipynb  test_standalone.py  test_textrender.py
